--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<p>Your task is to create a webpage with specific styling using HTML and CSS. Follow the guidelines below:</p>
+		<p>Your task is to create a webpage with specific styling using HTML and CSS. Follow the guidelines below:</p>
+		<p>Your task is to create a webpage with specific styling using HTML and CSS. Follow the guidelines below:</p>
+	</div>
+	<ul>
+		<li>First paragraph</li>
+		<li>First paragraph</li>
+		<li>First paragraph</li>
+		<li>First paragraph</li>
+		<li>First paragraph</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
