--- a/main.html
+++ b/main.html
@@ -8,11 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div>
+	<article>
 		<p>Your task is to create a webpage with specific styling using HTML and CSS. Follow the guidelines below:</p>
 		<p>Your task is to create a webpage with specific styling using HTML and CSS. Follow the guidelines below:</p>
 		<p>Your task is to create a webpage with specific styling using HTML and CSS. Follow the guidelines below:</p>
-	</div>
+	</article>
 	<ul>
 		<li>First paragraph</li>
 		<li>First paragraph</li>
